--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             </div>
         </nav>
         <div class="row ">
-            <div class="col Header">
+            <div class="col-4 Header">
 
                 <h1 class="Header__title">Virtual healthcare for you</h1>
                 <p class="Header__text"> Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
-                <button type="button" class="btn btn-primary Header__button">Consult today</button>
+                <button type="button" class="btn btn-primary button1">Consult today</button>
             </div>
-            <div class="col">
+            <div class="col-8 virtual__image">
                 <a>
-                    <img class="Hero__img" src="./images/illustration.png" />
+                    <img src="./images/illustration.png" />
                 </a>
             </div>
         </div>
@@ -114,24 +114,55 @@
                     </div>
                 </div>
             </div>
+            <div class="Services__button">
+                <button type="button" class="btn btn-primary Services__button__text ">Learn more</button>
+            </div>
         </div>
         <div>
-            <button type="button" class="btn btn-primary Services__button">Learn more</button>
-        </div>
+            <div class="row section">
+                <div class="col-7">
+                    <a>
+                        <img class="Hero__img" src="./images/leading.png" />
+                    </a>
+                </div>
+                <div class="col Header">
 
+                    <h1 class="Header__title">Leading healthcare providers</h1>
+                    <p class="Header__text"> Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
+                    <button type="button" class="btn btn-primary button1">Learn more</button>
+                </div>
+
+            </div>
+        </div>
+        <div class="row  section">
+            <div class="col Header">
+
+                <h1 class="Header__title">Download our mobile apps</h1>
+                <p class="Header__text"> Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely</p>
+                <button type="button" class="btn btn-primary button1">Download </button>
+            </div>
+            <div class="col">
+                <a>
+                    <img class="Hero__img" src="./images/download.png" />
+                </a>
+            </div>
+        </div>
     </div>
+
+
+
     <!-- Footer -->
 
 
     <footer>
 
         <div class="row row-10 footer">
-            <div class="col-4 col-xl-5 item footer__text">
+            <div class="col-4  item footer__text">
                 <h3>Trafalgar</h3>
                 <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
                 <h6>©Trafalgar PTY LTD 2020. All rights reserved</h6>
             </div>
-            <div class="col-4 item footer__text1">
+            <div class="col item footer__text1">
                 <h3>Company</h3>
                 <ul class="list_items">
                     <li>About</li>
@@ -141,7 +172,7 @@
 
                 </ul>
             </div>
-            <div class="col-4 item footer__text1">
+            <div class="col item footer__text1">
                 <h3>Region</h3>
                 <ul class="list_items">
                     <li>Indonesia</li>
@@ -151,7 +182,7 @@
 
                 </ul>
             </div>
-            <div class=" col-4 item footer__text1">
+            <div class=" col item footer__text1">
                 <h3>Help</h3>
                 <ul class="list_items">
                     <li>Help center</li>
@@ -164,6 +195,7 @@
             </div>
 
         </div>
+
 
     </footer>
 
